Refactoring the code and adding dto to pass the data.
